# schemata-c

./: CMakeLists.txt  README.md
include/schemata/: schemas_data.h  schemata.h
scripts/: generate_schemas_data.py
src/: schemata.c
tests/: test_registry.c
